# document-reader-mcp

./: README.md  __init__.py  install_deps.py  pyproject.toml  requirements.txt  server.py  simple_diagram_reader.py  start_document_reader.bat
