[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "document-reader-mcp"
version = "1.0.0"
description = "MCP服务器用于读取各种文档格式 (Word, PDF, TXT, RTF等)"
authors = [
    {name = "Kiro", email = "kiro@example.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0.0",
    "python-docx>=1.1.0",
    "PyPDF2>=3.0.1",
    "striprtf>=0.0.26",
    "Pillow>=10.0.0",
    "requests>=2.31.0"
]

[project.scripts]
document-reader-mcp = "document_reader_mcp.server:main"

[project.urls]
Homepage = "https://github.com/qitianfeng/document-reader-mcp"
Repository = "https://github.com/qitianfeng/document-reader-mcp.git"
Issues = "https://github.com/qitianfeng/document-reader-mcp/issues"
